--- a/moduleEdit.html
+++ b/moduleEdit.html
@@ -10,6 +10,7 @@
 <body>
 	<div class="limiter">
 		<div class="container-login100" style="background-image: url('images/bg-01.jpg');">
+			<img class="step1Image" id="step1" src="images/GlycolysisStep1.jpg" style="display: none;">
 			<div class="wrap-login100">
 				<form class="login100-form validate-form">
                     <div class="editToolbar">
@@ -25,105 +26,105 @@
 										</div>
 										<div class="viewAndCreateReaction">
 												<canvas id="imageCanvas" height="500" width="400"></canvas>
-										    <ul id="substrates">
-													<label class="container">Substrate 1
-												  	<input id="sub1" type="checkbox" checked>
+										    <ul class="subs" id="substrates">
+													<label class="container">Glucose
+												  	<input name="sub1" type="checkbox">
 												  	<span class="checkmark"></span>
 													</label>
-													<label class="container">Substrate 2
-												  	<input type="checkbox" id="sub2">
+													<label class="container">Glucose-6-Phosphate
+												  	<input type="checkbox" name="sub2">
 												  	<span class="checkmark"></span>
 													</label>
-													<label class="container">Substrate 3
-												  	<input type="checkbox" id="sub3">
+													<label class="container">Fructose-6-Phosphate
+												  	<input type="checkbox" name="sub3">
 												  	<span class="checkmark"></span>
 													</label>
-													<label class="container">Substrate 4
-												  	<input type="checkbox" id="sub4">
+													<label class="container">Fructose-1,6-Biphosphate
+												  	<input type="checkbox" name="sub4">
 												  	<span class="checkmark"></span>
 													</label>
-													<label class="container">Substrate 5
-												  	<input type="checkbox" id="sub5">
+													<label class="container">Dihydroxyacetone Phosphate
+												  	<input type="checkbox" name="sub5">
 												  	<span class="checkmark"></span>
 													</label>
-													<label class="container">Substrate 6
-												  	<input type="checkbox" id="sub6">
+													<label class="container">Glyceraldehyde-3-Phosphate
+												  	<input type="checkbox" name="sub6">
 												  	<span class="checkmark"></span>
 													</label>
-													<label class="container">Substrate 7
-												  	<input type="checkbox" id="sub7">
+													<label class="container">1,3-bisphoglycerate
+												  	<input type="checkbox" name="sub7">
 												  	<span class="checkmark"></span>
 													</label>
-													<label class="container">Substrate 8
-												  	<input type="checkbox" id="sub8">
+													<label class="container">3 phosphoglycerate
+												  	<input type="checkbox" name="sub8">
 												  	<span class="checkmark"></span>
 													</label>
 									    	</ul>
-												<ul id="products">
-													<label class="container">Product 1
-														<input type="checkbox" id="prod1">
+												<ul class="prods" id="products">
+													<label class="container">Glucose-6-Phosphate
+														<input type="checkbox" name="prod1">
 														<span class="checkmark"></span>
 													</label>
-													<label class="container">Product 2
-														<input type="checkbox" id="prod2">
+													<label class="container">Fructose-6-Phosphate
+														<input type="checkbox" name="prod2">
 														<span class="checkmark"></span>
 													</label>
-													<label class="container">Product 3
-														<input type="checkbox" id="prod3">
+													<label class="container">Fructose-1,6-Biphosphate
+														<input type="checkbox" name="prod3">
 														<span class="checkmark"></span>
 													</label>
-													<label class="container">Product 4
-														<input type="checkbox" id="prod4">
+													<label class="container">Dihydroxyacetone Phosphate
+														<input type="checkbox" name="prod4">
 														<span class="checkmark"></span>
 													</label>
-													<label class="container">Product 5
-														<input type="checkbox" id="prod5">
+													<label class="container">Glyceraldehyde-3-Phosphate
+														<input type="checkbox" name="prod5">
 														<span class="checkmark"></span>
 													</label>
-													<label class="container">Product 6
-														<input type="checkbox" id="prod6">
+													<label class="container">1,3-bisphoglycerate
+														<input type="checkbox" name="prod6">
 														<span class="checkmark"></span>
 													</label>
-													<label class="container">Product 7
-														<input type="checkbox" id="prod7">
+													<label class="container">3 phosphoglycerate
+														<input type="checkbox" name="prod7">
 														<span class="checkmark"></span>
 													</label>
-													<label class="container">Product 8
-														<input type="checkbox" id="prod8">
+													<label class="container">2 phosphoglycerate
+														<input type="checkbox" name="prod8">
 														<span class="checkmark"></span>
 													</label>
 										    </ul>
-												<ul id="enzymes">
+												<ul class="enzs" id="enzymes">
 													<label class="container">Enzyme 1
-														<input type="checkbox" id="enz1">
+														<input type="checkbox" name="enz1">
 														<span class="checkmark"></span>
 													</label>
 													<label class="container">Enzyme 2
-														<input type="checkbox" id="enz2">
+														<input type="checkbox" name="enz2">
 														<span class="checkmark"></span>
 													</label>
 													<label class="container">Enzyme 3
-														<input type="checkbox" id="enz3">
+														<input type="checkbox" name="enz3">
 														<span class="checkmark"></span>
 													</label>
 													<label class="container">Enzyme 4
-														<input type="checkbox" id="enz4">
+														<input type="checkbox" name="enz4">
 														<span class="checkmark"></span>
 													</label>
 													<label class="container">Enzyme 5
-														<input type="checkbox" id="enz5">
+														<input type="checkbox" name="enz5">
 														<span class="checkmark"></span>
 													</label>
 													<label class="container">Enzyme 6
-														<input type="checkbox" id="enz6">
+														<input type="checkbox" name="enz6">
 														<span class="checkmark"></span>
 													</label>
 													<label class="container">Enzyme 7
-														<input type="checkbox" id="enz7">
+														<input type="checkbox" name="enz7">
 														<span class="checkmark"></span>
 													</label>
 													<label class="container">Enzyme 8
-														<input type="checkbox" id="enz8">
+														<input type="checkbox" name="enz8">
 														<span class="checkmark"></span>
 													</label>
 										    </ul>
