updates to moduleEdit.html

--- a/moduleEdit.html
+++ b/moduleEdit.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Module Edit Screen</title>
 	<meta charset="UTF-8">
+	{% load static %}
 	<link rel="stylesheet" type="text/css" href="css/util.css">
 	<link rel="stylesheet" type="text/css" href="css/moduleEdit.css">
 <!--===============================================================================================-->
