--- a/moduleEdit.html
+++ b/moduleEdit.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Module Edit Screen</title>
 	<meta charset="UTF-8">
+	{% load static %}
 	<link rel="stylesheet" type="text/css" href="css/util.css">
 	<link rel="stylesheet" type="text/css" href="css/moduleEdit.css">
 <!--===============================================================================================-->
@@ -25,8 +26,7 @@
                         </div>
 										</div>
 										<div class="viewAndCreateReaction">
-												<canvas id="imageCanvas" height="500" width="800"></canvas>
-												<p>SUBSTRATES</p>
+												<canvas id="imageCanvas" height="500" width="400"></canvas>
 										    <ul class="subs" id="substrates">
 													<label class="container">Glucose
 												  	<input name="subs" type="checkbox" onchange=onRadioChange() value=1>
@@ -61,73 +61,71 @@
 												  	<span class="checkmark"></span>
 													</label>
 									    	</ul>
-												<p>ENZYMES</p>
-												<ul class="enzs" id="enzymes">
-													<label class="container">Enzyme 1
-														<input type="checkbox" name="enz1" onchange="onRadioChange()" value=9>
-														<span class="checkmark"></span>
-													</label>
-													<label class="container">Enzyme 2
-														<input type="checkbox" name="enz2" onchange="onRadioChange()" value=10>
-														<span class="checkmark"></span>
-													</label>
-													<label class="container">Enzyme 3
-														<input type="checkbox" name="enz3" onchange="onRadioChange()" value=11>
-														<span class="checkmark"></span>
-													</label>
-													<label class="container">Enzyme 4
-														<input type="checkbox" name="enz4" onchange="onRadioChange()" value=12>
-														<span class="checkmark"></span>
-													</label>
-													<label class="container">Enzyme 5
-														<input type="checkbox" name="enz5" onchange="onRadioChange()" value=13>
-														<span class="checkmark"></span>
-													</label>
-													<label class="container">Enzyme 6
-														<input type="checkbox" name="enz6" onchange="onRadioChange()" value=14>
-														<span class="checkmark"></span>
-													</label>
-													<label class="container">Enzyme 7
-														<input type="checkbox" name="enz7" onchange="onRadioChange()" value=15>
-														<span class="checkmark"></span>
-													</label>
-													<label class="container">Enzyme 8
-														<input type="checkbox" name="enz8" onchange="onRadioChange()" value=16>
-														<span class="checkmark"></span>
-													</label>
-												</ul>
-												<p>PRODUCTS</p>
 												<ul class="prods" id="products">
 													<label class="container">Glucose-6-Phosphate
-														<input type="checkbox" name="prod1" onchange="onRadioChange()" value=17>
+														<input type="checkbox" name="prod1" onchange="onRadioChange()" value=9>
 														<span class="checkmark"></span>
 													</label>
 													<label class="container">Fructose-6-Phosphate
-														<input type="checkbox" name="prod2" onchange="onRadioChange()" value=18>
+														<input type="checkbox" name="prod2" onchange="onRadioChange()" value=10>
 														<span class="checkmark"></span>
 													</label>
 													<label class="container">Fructose-1,6-Biphosphate
-														<input type="checkbox" name="prod3" onchange="onRadioChange()" value=19>
+														<input type="checkbox" name="prod3" onchange="onRadioChange()" value=11>
 														<span class="checkmark"></span>
 													</label>
 													<label class="container">Dihydroxyacetone Phosphate
-														<input type="checkbox" name="prod4" onchange="onRadioChange()" value=20>
+														<input type="checkbox" name="prod4" onchange="onRadioChange()" value=12>
 														<span class="checkmark"></span>
 													</label>
 													<label class="container">Glyceraldehyde-3-Phosphate
-														<input type="checkbox" name="prod5" onchange="onRadioChange()" value=21>
+														<input type="checkbox" name="prod5" onchange="onRadioChange()" value=13>
 														<span class="checkmark"></span>
 													</label>
 													<label class="container">1,3-bisphoglycerate
-														<input type="checkbox" name="prod6" onchange="onRadioChange()" value=22>
+														<input type="checkbox" name="prod6" onchange="onRadioChange()" value=14>
 														<span class="checkmark"></span>
 													</label>
 													<label class="container">3 phosphoglycerate
-														<input type="checkbox" name="prod7" onchange="onRadioChange()" value=23>
+														<input type="checkbox" name="prod7" onchange="onRadioChange()" value=15>
 														<span class="checkmark"></span>
 													</label>
 													<label class="container">2 phosphoglycerate
-														<input type="checkbox" name="prod8" onchange="onRadioChange()" value=24>
+														<input type="checkbox" name="prod8" onchange="onRadioChange()" value=16>
+														<span class="checkmark"></span>
+													</label>
+										    </ul>
+												<ul class="enzs" id="enzymes">
+													<label class="container">Enzyme 1
+														<input type="checkbox" name="enz1" onchange="onRadioChange()" value=17>
+														<span class="checkmark"></span>
+													</label>
+													<label class="container">Enzyme 2
+														<input type="checkbox" name="enz2" onchange="onRadioChange()" value=18>
+														<span class="checkmark"></span>
+													</label>
+													<label class="container">Enzyme 3
+														<input type="checkbox" name="enz3" onchange="onRadioChange()" value=19>
+														<span class="checkmark"></span>
+													</label>
+													<label class="container">Enzyme 4
+														<input type="checkbox" name="enz4" onchange="onRadioChange()" value=20>
+														<span class="checkmark"></span>
+													</label>
+													<label class="container">Enzyme 5
+														<input type="checkbox" name="enz5" onchange="onRadioChange()" value=21>
+														<span class="checkmark"></span>
+													</label>
+													<label class="container">Enzyme 6
+														<input type="checkbox" name="enz6" onchange="onRadioChange()" value=22>
+														<span class="checkmark"></span>
+													</label>
+													<label class="container">Enzyme 7
+														<input type="checkbox" name="enz7" onchange="onRadioChange()" value=23>
+														<span class="checkmark"></span>
+													</label>
+													<label class="container">Enzyme 8
+														<input type="checkbox" name="enz8" onchange="onRadioChange()" value=24>
 														<span class="checkmark"></span>
 													</label>
 										    </ul>
