updated module edit screen so that the reaction is displayed on canvas

--- a/testApp/static/moduleEdit.html
+++ b/testApp/static/moduleEdit.html
@@ -29,105 +29,105 @@
 												<p>SUBSTRATES</p>
 										    <ul class="subs" id="substrates">
 													<label class="container">Glucose
-												  	<input name="subs" type="checkbox" onchange=onRadioChange() value=1>
+												  	<input value="Glucose" type="checkbox" onchange=onRadioChange() name="Substrate">
 												  	<span class="checkmark"></span>
 													</label>
 													<label class="container">Glucose-6-Phosphate
-												  	<input type="checkbox" name="subs" onchange="onRadioChange()" value=2>
+												  	<input type="checkbox" value="Glucose-6-Phosphate" onchange="onRadioChange()" name="Substrate">
 												  	<span class="checkmark"></span>
 													</label>
 													<label class="container">Fructose-6-Phosphate
-												  	<input type="checkbox" name="subs" onchange="onRadioChange()" value=3>
+												  	<input type="checkbox" value="Fructose-6-Phosphate" onchange="onRadioChange()" name="Substrate">
 												  	<span class="checkmark"></span>
 													</label>
 													<label class="container">Fructose-1,6-Biphosphate
-												  	<input type="checkbox" name="subs" onchange="onRadioChange()" value=4>
+												  	<input type="checkbox" value="Fructose-1,6-Biphosphate" onchange="onRadioChange()" name="Substrate">
 												  	<span class="checkmark"></span>
 													</label>
 													<label class="container">Dihydroxyacetone Phosphate
-												  	<input type="checkbox" name="subs" onchange="onRadioChange()" value=5>
+												  	<input type="checkbox" value="Dihydroxyacetone Phosphate" onchange="onRadioChange()" name="Substrate">
 												  	<span class="checkmark"></span>
 													</label>
 													<label class="container">Glyceraldehyde-3-Phosphate
-												  	<input type="checkbox" name="subs" onchange="onRadioChange()" value=6>
+												  	<input type="checkbox" value="Glyceraldehyde-3-Phosphate" onchange="onRadioChange()" name="Substrate">
 												  	<span class="checkmark"></span>
 													</label>
 													<label class="container">1,3-bisphoglycerate
-												  	<input type="checkbox" name="subs" onchange="onRadioChange()" value=7>
+												  	<input type="checkbox" value="1,3-bisphoglycerate" onchange="onRadioChange()" name="Substrate">
 												  	<span class="checkmark"></span>
 													</label>
 													<label class="container">3 phosphoglycerate
-												  	<input type="checkbox" name="subs" onchange="onRadioChange()" value=8>
+												  	<input type="checkbox" value="3 phosphoglycerate" onchange="onRadioChange()" name="Substrate">
 												  	<span class="checkmark"></span>
 													</label>
 									    	</ul>
 												<p>ENZYMES</p>
 												<ul class="enzs" id="enzymes">
 													<label class="container">Enzyme 1
-														<input type="checkbox" name="enz1" onchange="onRadioChange()" value=9>
+														<input type="radio" name="Enzyme" onchange="onRadioChange()" value="Enzyme 1">
 														<span class="checkmark"></span>
 													</label>
 													<label class="container">Enzyme 2
-														<input type="checkbox" name="enz2" onchange="onRadioChange()" value=10>
+														<input type="radio" name="Enzyme" onchange="onRadioChange()" value="Enzyme 2" >
 														<span class="checkmark"></span>
 													</label>
 													<label class="container">Enzyme 3
-														<input type="checkbox" name="enz3" onchange="onRadioChange()" value=11>
+														<input type="radio" name="Enzyme" onchange="onRadioChange()" value="Enzyme 3">
 														<span class="checkmark"></span>
 													</label>
 													<label class="container">Enzyme 4
-														<input type="checkbox" name="enz4" onchange="onRadioChange()" value=12>
+														<input type="radio" name="Enzyme" onchange="onRadioChange()" value="Enzyme 4">
 														<span class="checkmark"></span>
 													</label>
 													<label class="container">Enzyme 5
-														<input type="checkbox" name="enz5" onchange="onRadioChange()" value=13>
+														<input type="radio" name="Enzyme" onchange="onRadioChange()" value="Enzyme 5">
 														<span class="checkmark"></span>
 													</label>
 													<label class="container">Enzyme 6
-														<input type="checkbox" name="enz6" onchange="onRadioChange()" value=14>
+														<input type="radio" name="Enzyme" onchange="onRadioChange()" value="Enzyme 6">
 														<span class="checkmark"></span>
 													</label>
 													<label class="container">Enzyme 7
-														<input type="checkbox" name="enz7" onchange="onRadioChange()" value=15>
+														<input type="radio" name="Enzyme" onchange="onRadioChange()" value="Enzyme 7">
 														<span class="checkmark"></span>
 													</label>
 													<label class="container">Enzyme 8
-														<input type="checkbox" name="enz8" onchange="onRadioChange()" value=16>
+														<input type="radio" name="Enzyme" onchange="onRadioChange()" value="Enzyme 8">
 														<span class="checkmark"></span>
 													</label>
 												</ul>
 												<p>PRODUCTS</p>
 												<ul class="prods" id="products">
 													<label class="container">Glucose-6-Phosphate
-														<input type="checkbox" name="prod1" onchange="onRadioChange()" value=17>
+														<input type="checkbox" value="Glucose-6-Phosphate" onchange="onRadioChange()" name=Product>
 														<span class="checkmark"></span>
 													</label>
 													<label class="container">Fructose-6-Phosphate
-														<input type="checkbox" name="prod2" onchange="onRadioChange()" value=18>
+														<input type="checkbox" value="Fructose-6-Phosphate" onchange="onRadioChange()" name="Product">
 														<span class="checkmark"></span>
 													</label>
 													<label class="container">Fructose-1,6-Biphosphate
-														<input type="checkbox" name="prod3" onchange="onRadioChange()" value=19>
+														<input type="checkbox" value="Fructose-1,6-Biphosphate" onchange="onRadioChange()" name="Product">
 														<span class="checkmark"></span>
 													</label>
 													<label class="container">Dihydroxyacetone Phosphate
-														<input type="checkbox" name="prod4" onchange="onRadioChange()" value=20>
+														<input type="checkbox" value="Dihydroxyacetone Phosphate" onchange="onRadioChange()" name="Product">
 														<span class="checkmark"></span>
 													</label>
 													<label class="container">Glyceraldehyde-3-Phosphate
-														<input type="checkbox" name="prod5" onchange="onRadioChange()" value=21>
+														<input type="checkbox" value="Glyceraldehyde-3-Phosphate" onchange="onRadioChange()" name="Product">
 														<span class="checkmark"></span>
 													</label>
 													<label class="container">1,3-bisphoglycerate
-														<input type="checkbox" name="prod6" onchange="onRadioChange()" value=22>
+														<input type="checkbox" value="1,3-bisphoglycerate" onchange="onRadioChange()" name="Product">
 														<span class="checkmark"></span>
 													</label>
 													<label class="container">3 phosphoglycerate
-														<input type="checkbox" name="prod7" onchange="onRadioChange()" value=23>
+														<input type="checkbox" value="3 phosphoglycerate" onchange="onRadioChange()" name="Product">
 														<span class="checkmark"></span>
 													</label>
 													<label class="container">2 phosphoglycerate
-														<input type="checkbox" name="prod8" onchange="onRadioChange()" value=24>
+														<input type="checkbox" value="2 phosphoglycerate" onchange="onRadioChange()" name="Product">
 														<span class="checkmark"></span>
 													</label>
 										    </ul>
@@ -137,9 +137,6 @@
 			</div>
 		</div>
 	</div>
-
-<!--
-	<div id="dropDownSelect1"></div> -->
 	<script src="js/moduleEdit.js"></script>
 
 </body>
