updates to module Edit

--- a/testApp/static/moduleEdit.html
+++ b/testApp/static/moduleEdit.html
@@ -11,6 +11,16 @@
 	<div class="limiter">
 		<div class="container-login100" style="background-image: url('images/bg-01.jpg');">
 			<img class="step1Image" id="step1" src="images/GlycolysisStep1.jpg" style="display: none;">
+			<img class="step1Image" id="Glucose" src="images/Glucose.jpg" style="display: none;">
+			<img class="step1Image" id="Glucose-6-Phosphate" src="images/Glucose-6-Phosphate.jpg" style="display: none;">
+			<img class="step1Image" id="Fructose-6-Phosphate" src="images/Fructose-6-Phosphate.jpg" style="display: none;">
+			<img class="step1Image" id="Fructose-1,6-bisphosphate" src="images/Fructose-1,6-bisphosphate.jpg" style="display: none;">
+			<img class="step1Image" id="Dihydroxyacetone Phosphate" src="images/Dihydroxyacetone Phosphate.jpg" style="display: none;">
+			<img class="step1Image" id="Glyceraldehyde-3-Phosphate" src="images/Glyceraldehyde-3-Phosphate.jpg" style="display: none;">
+			<img class="step1Image" id="1,3-bisphoglycerate" src="images/1,3-bisphoglycerate.jpg" style="display: none;">
+			<img class="step1Image" id="3 phosphoglycerate" src="images/3phosphoglycerate.jpg" style="display: none;">
+			<img class="step1Image" id="2 phosphoglycerate" src="images/2phosphoglycerate.jpg" style="display: none;">
+
 			<div class="wrap-login100">
 				<form class="login100-form validate-form">
                     <div class="editToolbar">
@@ -40,8 +50,8 @@
 												  	<input type="checkbox" value="Fructose-6-Phosphate" onchange="onRadioChange()" name="Substrate">
 												  	<span class="checkmark"></span>
 													</label>
-													<label class="container">Fructose-1,6-Biphosphate
-												  	<input type="checkbox" value="Fructose-1,6-Biphosphate" onchange="onRadioChange()" name="Substrate">
+													<label class="container">Fructose-1,6-bisphosphate
+												  	<input type="checkbox" value="Fructose-1,6-bisphosphate" onchange="onRadioChange()" name="Substrate">
 												  	<span class="checkmark"></span>
 													</label>
 													<label class="container">Dihydroxyacetone Phosphate
