--- a/testApp/static/moduleEdit.html
+++ b/testApp/static/moduleEdit.html
@@ -18,8 +18,8 @@
 			<img class="step1Image" id="Dihydroxyacetone Phosphate" src="images/Dihydroxyacetone Phosphate.jpg" style="display: none;">
 			<img class="step1Image" id="Glyceraldehyde-3-Phosphate" src="images/Glyceraldehyde-3-Phosphate.jpg" style="display: none;">
 			<img class="step1Image" id="1,3-bisphoglycerate" src="images/1,3-bisphoglycerate.jpg" style="display: none;">
-			<img class="step1Image" id="3 phosphoglycerate" src="images/3phosphoglycerate.jpg" style="display: none;">
-			<img class="step1Image" id="2 phosphoglycerate" src="images/2phosphoglycerate.jpg" style="display: none;">
+			<img class="step1Image" id="3 phosphoglycerate" src="images/3 phosphoglycerate.jpg" style="display: none;">
+			<img class="step1Image" id="2 phosphoglycerate" src="images/2 phosphoglycerate.jpg" style="display: none;">
 
 			<div class="wrap-login100">
 				<form class="login100-form validate-form">
