updated module edit so imgs are displayed in canvas

--- a/testApp/static/moduleEdit.html
+++ b/testApp/static/moduleEdit.html
@@ -116,8 +116,8 @@
 														<input type="checkbox" value="Fructose-6-Phosphate" onchange="onRadioChange()" name="Product">
 														<span class="checkmark"></span>
 													</label>
-													<label class="container">Fructose-1,6-Biphosphate
-														<input type="checkbox" value="Fructose-1,6-Biphosphate" onchange="onRadioChange()" name="Product">
+													<label class="container">Fructose-1,6-bisphosphate
+														<input type="checkbox" value="Fructose-1,6-bisphosphate" onchange="onRadioChange()" name="Product">
 														<span class="checkmark"></span>
 													</label>
 													<label class="container">Dihydroxyacetone Phosphate
