added static to module edit html

--- a/testApp/static/moduleEdit.html
+++ b/testApp/static/moduleEdit.html
@@ -3,23 +3,24 @@
 <head>
 	<title>Module Edit Screen</title>
 	<meta charset="UTF-8">
-	<link rel="stylesheet" type="text/css" href="css/util.css">
-	<link rel="stylesheet" type="text/css" href="css/moduleEdit.css">
+	{% load static %}
+	<link rel="stylesheet" type="text/css" href="{% static 'css/util.css' %}">
+	<link rel="stylesheet" type="text/css" href="{% static 'css/moduleEdit.css' %}">
 <!--===============================================================================================-->
 </head>
 <body>
 	<div class="limiter">
 		<div class="container-login100" style="background-image: url('images/bg-01.jpg');">
-			<img class="step1Image" id="step1" src="images/GlycolysisStep1.jpg" style="display: none;">
-			<img class="step1Image" id="Glucose" src="images/Glucose.jpg" style="display: none;">
-			<img class="step1Image" id="Glucose-6-Phosphate" src="images/Glucose-6-Phosphate.jpg" style="display: none;">
-			<img class="step1Image" id="Fructose-6-Phosphate" src="images/Fructose-6-Phosphate.jpg" style="display: none;">
-			<img class="step1Image" id="Fructose-1,6-bisphosphate" src="images/Fructose-1,6-bisphosphate.jpg" style="display: none;">
-			<img class="step1Image" id="Dihydroxyacetone Phosphate" src="images/Dihydroxyacetone Phosphate.jpg" style="display: none;">
-			<img class="step1Image" id="Glyceraldehyde-3-Phosphate" src="images/Glyceraldehyde-3-Phosphate.jpg" style="display: none;">
-			<img class="step1Image" id="1,3-bisphoglycerate" src="images/1,3-bisphoglycerate.jpg" style="display: none;">
-			<img class="step1Image" id="3 phosphoglycerate" src="images/3 phosphoglycerate.jpg" style="display: none;">
-			<img class="step1Image" id="2 phosphoglycerate" src="images/2 phosphoglycerate.jpg" style="display: none;">
+			<img class="step1Image" id="step1" src="{% static 'images/GlycolysisStep1.jpg' %}" style="display: none;">
+			<img class="step1Image" id="Glucose" src="{% static 'images/Glucose.jpg' %}" style="display: none;">
+			<img class="step1Image" id="Glucose-6-Phosphate" src="{% static 'images/Glucose-6-Phosphate.jpg' %}" style="display: none;">
+			<img class="step1Image" id="Fructose-6-Phosphate" src="{% static 'images/Fructose-6-Phosphate.jpg' %}" style="display: none;">
+			<img class="step1Image" id="Fructose-1,6-bisphosphate" src={"% static 'images/Fructose-1,6-bisphosphate.jpg' %}" style="display: none;">
+			<img class="step1Image" id="Dihydroxyacetone Phosphate" src="{% static 'images/Dihydroxyacetone Phosphate.jpg' %}" style="display: none;">
+			<img class="step1Image" id="Glyceraldehyde-3-Phosphate" src={"% static 'images/Glyceraldehyde-3-Phosphate.jpg' %}" style="display: none;">
+			<img class="step1Image" id="1,3-bisphoglycerate" src="{% static 'images/1,3-bisphoglycerate.jpg' %}" style="display: none;">
+			<img class="step1Image" id="3 phosphoglycerate" src="{% static 'images/3 phosphoglycerate.jpg' %}" style="display: none;">
+			<img class="step1Image" id="2 phosphoglycerate" src="{% static 'images/2 phosphoglycerate.jpg' %}" style="display: none;">
 
 			<div class="wrap-login100">
 				<form class="login100-form validate-form">
@@ -147,7 +148,7 @@
 			</div>
 		</div>
 	</div>
-	<script src="js/moduleEdit.js"></script>
+	<script src="{% static 'js/moduleEdit.js' %}"></script>
 
 </body>
 </html>
