--- a/testApp/static/moduleEdit.html
+++ b/testApp/static/moduleEdit.html
@@ -4,12 +4,12 @@
 	<title>Module Edit Screen</title>
 	<meta charset="UTF-8">
 	{% load static %}
-	<link rel="stylesheet" type="text/css" href="{% static 'css/util.css' %}">
-	<link rel="stylesheet" type="text/css" href="{% static 'css/moduleEdit.css' %}">
+	<link rel="stylesheet" type="text/css" href="{% static 'css/util.css' %}"/>
+	<link rel="stylesheet" type="text/css" href="{% static 'css/moduleEdit.css' %}"/>
 </head>
 <body>
 	<div class="limiter">
-		<div class="container-login100" style="background-image: url('{% static'images/bg-01.jpg' %}');">
+		<div class="container-login100" style="background-image: url('{% static 'images/bg-01.jpg' %}');">
 			<img class="step1Image" id="step1" src="{% static 'images/GlycolysisStep1.jpg' %}" style="display: none;">
 			<img class="step1Image" id="Glucose" src="{% static 'images/Glucose.jpg' %}" style="display: none;">
 			<img class="step1Image" id="Glucose-6-Phosphate" src="{% static 'images/Glucose-6-Phosphate.jpg' %}" style="display: none;">
