--- a/testApp/static/moduleEdit.html
+++ b/testApp/static/moduleEdit.html
@@ -3,13 +3,15 @@
 <head>
 	<title>Module Edit Screen</title>
 	<meta charset="UTF-8">
-	{% load static %}
-	<link rel="stylesheet" type="text/css" href="{% static 'css/util.css' %}"/>
-	<link rel="stylesheet" type="text/css" href="{% static 'css/moduleEdit.css' %}"/>
+	<!-- {% load static %} -->
+	<!-- <link rel="stylesheet" type="text/css" href="{% static 'css/util.css' %}"/>
+	<link rel="stylesheet" type="text/css" href="{% static 'css/moduleEdit.css' %}"/> -->
+	<link rel="stylesheet" type="text/css" href="css/util.css"/>
+	<link rel="stylesheet" type="text/css" href="css/moduleEdit.css"/>
 </head>
 <body>
 	<div class="limiter">
-		<div class="container-login100" style="background-image: url('{% static 'images/bg-01.jpg' %}');">
+		<!-- <div class="container-login100" style="background-image: url('{% static 'images/bg-01.jpg' %}');">
 			<img class="step1Image" id="step1" src="{% static 'images/GlycolysisStep1.jpg' %}" style="display: none;">
 			<img class="step1Image" id="Glucose" src="{% static 'images/Glucose.jpg' %}" style="display: none;">
 			<img class="step1Image" id="Glucose-6-Phosphate" src="{% static 'images/Glucose-6-Phosphate.jpg' %}" style="display: none;">
@@ -19,8 +21,18 @@
 			<img class="step1Image" id="Glyceraldehyde-3-Phosphate" src={"% static 'images/Glyceraldehyde-3-Phosphate.jpg' %}" style="display: none;">
 			<img class="step1Image" id="1,3-bisphoglycerate" src="{% static 'images/1,3-bisphoglycerate.jpg' %}" style="display: none;">
 			<img class="step1Image" id="3 phosphoglycerate" src="{% static 'images/3 phosphoglycerate.jpg' %}" style="display: none;">
-			<img class="step1Image" id="2 phosphoglycerate" src="{% static 'images/2 phosphoglycerate.jpg' %}" style="display: none;">
-
+			<img class="step1Image" id="2 phosphoglycerate" src="{% static 'images/2 phosphoglycerate.jpg' %}" style="display: none;"> -->
+		<div class="container-login100" style="background-image: url('images/bg-01.jpg');">
+			<img class="step1Image" id="step1" src="images/GlycolysisStep1.jpg" style="display: none;">
+			<img class="step1Image" id="Glucose" src="images/Glucose.jpg" style="display: none;">
+			<img class="step1Image" id="Glucose-6-Phosphate" src="images/Glucose-6-Phosphate.jpg" style="display: none;">
+			<img class="step1Image" id="Fructose-6-Phosphate" src="images/Fructose-6-Phosphate.jpg" style="display: none;">
+			<img class="step1Image" id="Fructose-1,6-bisphosphate" src="images/Fructose-1,6-bisphosphate.jpg" style="display: none;">
+			<img class="step1Image" id="Dihydroxyacetone Phosphate" src="images/Dihydroxyacetone Phosphate.jpg" style="display: none;">
+			<img class="step1Image" id="Glyceraldehyde-3-Phosphate" src="images/Glyceraldehyde-3-Phosphate.jpg" style="display: none;">
+			<img class="step1Image" id="1,3-bisphoglycerate" src="images/1,3-bisphoglycerate.jpg" style="display: none;">
+			<img class="step1Image" id="3 phosphoglycerate" src="images/3 phosphoglycerate.jpg" style="display: none;">
+			<img class="step1Image" id="2 phosphoglycerate" src="images/2 phosphoglycerate.jpg" style="display: none;">
 			<div class="wrap-login100">
 				<form class="login100-form validate-form">
                     <div class="editToolbar">
@@ -142,12 +154,48 @@
 													</label>
 										    </ul>
 												<button type="button" class="createReaction" id="createReaction">CREATE</button>
+												<label class="weight">Weight
+													<input type="range" list="tickmarks" id="weightSlider" name="Weight" min="-1" max ="1" step=0.01 onchange="updateTextInput(this.value);">
+														<datalist id="tickmarks" class="tickmarks">
+														  <option value="-1.0" label="-1.0">
+														  <option value="-0.9">
+														  <option value="-0.8">
+														  <option value="-0.7">
+														  <option value="-0.6">
+														  <option value="-0.5" label="-0.5">
+														  <option value="-0.4">
+														  <option value="-0.3">
+														  <option value="-0.2">
+														  <option value="-0.1">
+														  <option value="0.0" label="0.0">
+															<option value="0.1">
+														  <option value="0.2">
+														  <option value="0.3">
+														  <option value="0.4">
+														  <option value="0.5" label="0.5">
+														  <option value="0.6">
+														  <option value="0.7">
+														  <option value="0.8">
+														  <option value="0.9">
+														  <option value="1.0" label="1.0">
+														</datalist>
+														<input class="weightValue" type="text" id="weightSliderValue">
+														<button type="button" class="enterWeight" id="submitWeight">SUBMIT</button>
+														<label class="reversibleChoice">Reversible
+															<input type="radio" name="reversibleChoice" onchange="onRadioReverseChange()" value="Reversible">
+															<span class="checkmark"></span>
+														</label>
+														<label class="reversibleChoice">Irreversible
+															<input type="radio" name="reversibleChoice" onchange="onRadioReverseChange()" value="Irreversible" checked>
+															<span class="checkmark"></span>
+														</label>
+												</label>
 											</div>
 				</form>
 			</div>
 		</div>
 	</div>
-	<script src="{% static 'js/moduleEdit.js' %}"></script>
-
+	<!-- <script src="{% static 'js/moduleEdit.js' %}"></script> -->
+	<script src="js/moduleEdit.js"></script>
 </body>
 </html>
